# pruna-kvpress-eval

./: .gitignore  README.md  pyproject.toml
scripts/: _utils.py  downstream_eval.py  plot_results.py  speed_memory.py
shells/: _machine_config.sh.template  _submit.sh  downstream_eval.sh  plot_results_cpu.sh  speed_memory.sh
